--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "api",
   "version": "1.0.0",
   "main": "api.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node api.js"
   },
   "keywords": [],
   "author": "",
